--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "start": "node ./bin/start",
+    "start": "nodemon ./bin/start",
     "test": "mocha --recursive './test/*Test.js' --compilers js:babel-core/register"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "body-parser": "^1.16.1",
     "cookie-parser": "^1.4.3",
     "debug": "^3.0.0",
+    "dotenv": "^5.0.0",
     "express": "^4.15.4",
     "morgan": "^1.8.2",
     "nodemailer": "^4.6.0",
