--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "cookie-parser": "^1.4.3",
     "debug": "^3.0.0",
     "dotenv": "^5.0.0",
+    "email-templates": "^3.4.0",
     "express": "^4.15.4",
+    "firebase": "^4.10.1",
     "morgan": "^1.8.2",
     "nodemailer": "^4.6.0",
     "nodemailer-mailgun-transport": "^1.3.6",
